...
    <string name="preference_title_enable_offline_library">Enable Offline Library</string>
    <string name="preference_summary_enable_offline_library"><![CDATA[Access Wikipedia article packs (shown as .ZIM files) that have been downloaded to your device for reading when you\'re offline. <a href="https://www.mediawiki.org/wiki/Wikimedia_Apps/Offline_support">Find out more</a>]]></string>

    <!-- Crash reporter -->
    <string name="crash_report_dialog_title">Sorry, app crashed last time</string>
    <string name="crash_report_dialog_text">Would you like to send a crash report to HockeyApp / a third-party service provider so that Wikimedia can review your crash and fix the bug that caused it?</string>
    <string name="crash_report_dialog_dont_send_button">Skip</string>
    <string name="crash_report_dialog_always_send_button">Always send</string>
    <string name="crash_report_dialog_send_button">Send</string>
    <string name="crash_report_activity_title">Application error</string>
    <string name="crash_report_relaunch_or_quit">We\'re sorry, the Wikipedia app has experienced an error and was terminated.\n\nWould you like to start over or quit?</string>
    <string name="crash_report_relaunch">Start over</string>
    <string name="crash_report_quit">Quit</string>
...
    <string name="reading_lists_empty_message">Add articles to a list for reading later, even when you\'re offline.</string>
    <string name="reading_lists_onboarding_intro">Add articles to a list for reading later, even when you\'re offline!</string>
    <string name="reading_lists_onboarding_for_example">For example</string>
    <string name="reading_lists_onboarding_example1">Places to visit</string>
    <string name="reading_lists_onboarding_example2">Favorite animals</string>
    <string name="reading_lists_onboarding_example3">Space exploration</string>
    <string name="reading_lists_onboarding_got_it">Got it</string>
    <string name="reading_list_no_description">No description…</string>
    <string name="reading_list_empty">You have no articles added to this list.</string>
    <string name="reading_list_article_offline">Available offline</string>
    <string name="reading_list_article_make_offline">Make this article available offline</string>
    <string name="reading_list_add_to_other_list">Add to another reading list</string>
    <string name="reading_list_remove_from_list">Remove from %s</string>
...
    <string name="view_next_random_article">Load another random article</string>
    <string name="view_main_page_card_title">Today on Wikipedia</string>
    <string name="view_main_page_card_subtitle">Main page on %s</string>
    <string name="view_main_page_card_action">View main page</string>
    <string name="view_featured_image_card_title">Picture of the day</string>
    <string name="view_featured_image_card_download">Download</string>
    <string name="menu_feed_card_dismiss">Hide this card</string>
    <string name="menu_feed_card_dismissed">Card hidden.</string>
    <string name="menu_feed_overflow_label">More options</string>

    <string name="feed_featured_image_share_subject">Featured image from Wikimedia Commons</string>
    <string name="feed">Explore</string>
    <string name="view_card_footer_button">See more</string>
    <string name="most_read_list_card_title">Trending</string>
    <string name="view_static_card_icon_content_description">Card icon</string>
...
    <string name="back_to_top">Back to top</string>

    <!-- Travel Planner -->
    <string name="view_travel_card_title">Travel Planner</string>
    <string name="view_travel_card_subtitle">Plan your next trip with Wikipedia</string>
    <string name="view_travel_card_action">Plan a trip</string>
    <string name="plan_new_trip_button">Plan a new trip</string>
    <string name="fragment_travel_destination_title">Destination</string>
    <string name="date_select_date">Select Date</string>
    <string name="date_selected_date">Selected Date</string>
    <string name="date_departure">Select Departure Date</string>
    <string name="destination_picker">Destinations</string>
    <string name="article_menu_bar_notes">Manage notes</string>
    <string name="menu_page_article_notes">Article notes</string>
...
