<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 >

    <Button
        android:id="@+id/trip_button_new"
        style="@style/App.Button.White"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:background="@color/accent90"
        android:drawableRight="@drawable/ic_add_gray_24dp"
        android:text="@string/plan_new_trip_button"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trip_list_view_recycler"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:scrollbars="vertical" />

</LinearLayout>