<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_item_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:focusable="true"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/trip_info"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        style="@style/App.Button.White"
        android:background="@color/base100"
        android:orientation="vertical"
...
